configure default JVM parameters